# pdf-studio

./: .gitignore  CONTRIBUTING.md  README.md  _demo.py  n  pyproject.toml
pdf_studio/: __init__.py  document.py  render.py  styles.py
scripts/: generate_fixtures.py
tests/: test_document.py  test_fixtures.py  test_render.py  test_styles.py
tests/fixtures/: README.md
