[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-studio"
version = "0.1.0"
description = "Three lines of code for a PDF with a table, a chart, and a header."
license = {text = "AGPL-3.0-only"}
requires-python = ">=3.10"
dependencies = ["reportlab>=4"]
keywords = ["pdf", "pdf-generation", "report", "document"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Topic :: Office/Business",
    "Topic :: Printing",
]

[project.urls]
Homepage = "https://github.com/AshayK003/pdf-studio"

[tool.setuptools.packages.find]
include = ["pdf_studio*"]

[tool.setuptools.package-data]
pdf_studio = ["fonts/*.ttf"]
